added sample data and progress on cart flow

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,9 @@
 <ion-menu [content]="content">
-  <ion-header>
+  <!--<ion-header>
     <ion-toolbar>
       <ion-title>Menú</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header>-->
 
   <ion-content>
     <ion-list>
