--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -1,3 +1,53 @@
 page-cart {
-
+  .page-title {
+    img {
+      width: 30px;
+    }
+  }
+  .logo {
+    @media only screen and (max-width: 500px) {
+      left: 10px;
+    }
+    position: absolute;
+    z-index: -1;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    img {
+      width: 170px;
+    }
+  }
+  .no-items {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    left: 0;
+    margin: auto;
+    text-align: center;
+    h2 {
+      vertical-align: middle;
+    }
+  }
+  .item {
+    border-bottom: 0.5px solid rgba(0,0,0,0.1);
+    height: 100% !important;
+  }
+  .item-inner {
+    border-bottom: none !important;
+  }
+  .item-button {
+    h2 {
+      font-weight: 700;
+    }
+  }
+  .item-img {
+    margin-right: 10px;
+    float: left;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 5px;
+  }
 }
