--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,71 @@
 page-home {
-
+  .page-title {
+    img {
+      width: 30px;
+    }
+  }
+  .logo {
+    @media only screen and (max-width: 500px) {
+      left: 10px;
+    }
+    position: absolute;
+    z-index: -1;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    img {
+      width: 170px;
+    }
+  }
+  .cart-button {
+    img {
+      width: 30px;
+    }
+  }
+  .cart-count {
+    position: absolute;
+    top: 15px;
+    right: 40px;
+    width: 15px;
+    height: 15px;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 50%;
+    color: color($colors, primary);
+    font-weight: 700;
+    font-size: 12px;
+    font-family: $font-family-base;
+  }
+  @media only screen and (min-width: 500px) {
+    ion-col {
+      max-width: 50%;
+    }
+  }
+  .main-slides {
+    height: 250px;
+    ion-slide {
+      height: 250px;
+    }
+    img {
+      height: 250px;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+  .card {
+    box-shadow: 0px 1px 6px rgba(0,0,0,0.3);
+    margin: 10px;
+    border-radius: 5px;
+    h1 {
+      padding-top: 10px;
+    }
+    img {
+      padding: 10px;
+      object-fit: cover;
+    }
+    p {
+      padding-bottom: 10px;
+    }
+  }
 }
