--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,7 +22,7 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-
+$font-family-base: 'Lato-Light', Helvetica, sans-serif;
 
 
 // Named Color Variables
@@ -34,7 +34,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #f53d3d,
+  primary:    #FF0000,
   secondary:  #32db64,
   tertiary:     #1D5792,
   light:      #f4f4f4,
