--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -53,19 +53,43 @@ page-home {
       object-fit: cover;
     }
   }
-  .card {
-    box-shadow: 0px 1px 6px rgba(0,0,0,0.3);
-    margin: 10px;
-    border-radius: 5px;
-    h1 {
-      padding-top: 10px;
-    }
-    img {
-      padding: 10px;
-      object-fit: cover;
-    }
-    p {
-      padding-bottom: 10px;
+  .offer-slides {
+    //background-color: #999999;
+    width: 100%;
+    height: 225px;
+    ion-slide {
+      height: 225px;
+      width: 100px !important;
+      margin: 10px;
+      .card {
+        position: absolute;
+        top: 0;
+        height: 100px;
+        width: 100px !important;
+        box-shadow: 0px 1px 6px rgba(0,0,0,0.3);
+        border-radius: 5px;
+        overflow: hidden;
+        img {
+          width: 100px;
+          height: 100px;
+          object-fit: cover;
+        }
+      }
+      .details {
+        margin-top: 50px;
+        h6 {
+          font-size: 14px;
+          font-weight: 700;
+          margin: 0px 0px;
+        }
+        p {
+          font-size: 12px;
+          margin: 0px 0px;
+        }
+        .offer-button {
+          width: 30px;
+        }
+      }
     }
   }
 }
