--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -53,12 +53,28 @@ page-home {
       object-fit: cover;
     }
   }
+  .section-header {
+    width: 100%;
+    h2 {
+      padding-left: 8px;
+      display: inline-block;
+      text-align: left;
+      width: 49%;
+    }
+    a {
+      padding-right: 8px;
+      display: inline-block;
+      text-align: right;
+      width: 50%;
+      color: color($colors, dark);
+    }
+  }
   .offer-slides {
     //background-color: #999999;
     width: 100%;
-    height: 225px;
+    height: 200px;
     ion-slide {
-      height: 225px;
+      height: 200px;
       width: 100px !important;
       margin: 10px;
       .card {
@@ -76,11 +92,14 @@ page-home {
         }
       }
       .details {
-        margin-top: 50px;
+        margin-top: 100px;
         h6 {
+          max-height: 40px;
           font-size: 14px;
           font-weight: 700;
           margin: 0px 0px;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
         p {
           font-size: 12px;
